fixed overflowing error text.

--- a/apps/pm-user/src/components/molecules/formWrapper/formWrapper.module.scss
+++ b/apps/pm-user/src/components/molecules/formWrapper/formWrapper.module.scss
@@ -4,6 +4,16 @@
   width: 100%;
   height: 100vh;
   overflow-y: hidden;
+
+  :global {
+    .ant-form-item-explain-error {
+      color: #ff4d4f;
+      font-size: 1.2rem;
+      padding: 0.4rem 0 0.4rem 0.8rem;
+      width: 256px;
+    }
+  }
+
 }
 
 .leftContainer {
@@ -23,6 +33,8 @@
   height: 100vh;
   align-items: center;
   justify-content: center;
+
+
 }
 
 .loginBox {
